# esie

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main.py  requirements.txt
esie/models/: llama.cpp  llama.hpp  modules.cpp  phi.cpp  phi.hpp  qwen.cpp  qwen.hpp  utils.hpp
exps/: README.md  __main__.py  comp_rate_func.py  create_level_db.py  evopress.py  rl.py  untitled3.py  untitled4.py  utils.py
models/: llama.cpp  llama.hpp
notebooks/: layer_wise_sparsity.ipynb  sparsity_and_importance_metric.ipynb  untitled.ipynb  untitled2.ipynb  utils.py
scratch/: cublaslt.cpp  cusparse.cpp  custom_matmul.cu  scratch.py
scratch_pad/: sparsity_and_importance_metric.ipynb  untitled.ipynb  untitled.py  untitled2.ipynb  untitled2.py  untitled3.ipynb  untitled3.py  utils.py
scripts/: generate_llama2_7b_weights.py  generate_phi4_weights.py  generate_qwen3_weights.py  generate_weights_and_logits.py
tests/: main.cpp  test_llama.hpp  test_llama2_7b.hpp  test_llama3_1_8b.hpp  test_phi4.hpp  test_qwen3_14b.hpp  test_qwen3_4b.hpp  test_qwen3_8b.hpp
